se agregó contenido de inicio
se agregó contenido al inicio referente a la empresa luxury.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         <a href="#"><i class="icon-comments"></i><br />Testimonials</a>
                                     </li>
                                     <li>
-                                        <a href="services.html"><i class="icon-tasks"></i><br />Services</a>
+                                        <a href="services.html"><i class="icon-tasks"></i><br />Uses</a>
                                     </li>
                                     <li>
                                         <a href="about.html"><i class="icon-user"></i><br />About</a>
@@ -125,41 +125,17 @@
         <!-- Services -->
         <div class="what-we-do container">
             <div class="row">
-                <div class="service span3">
-                    <div class="icon-awesome">
-                        <i class="icon-eye-open"></i>
-                    </div>
-                    <h4>Beautiful Websites</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et...</p>
-                    <a href="services.html">Read more</a>
+                <div class="span8">
+                 <p class="alineado-a-izquierda">Luxury warehose storage was designed to meet the strong and growing demand for climate controlled, over-sized storage (495 - 2400 square feet) while providing incomparable value through ownership. The first phase, Buildings 100 - 300, was developed in 2007. Building 400 was completed in 2012 and Building 500 in July, 2013. By the Spring of 2014, Building 600 will house the last 14 units.</p>  
+                 <p class="alineado-a-izquierda">This exclusive gated community of garage condominiums is situated on nine acres with 99 completed units. Each unit provides secure indoor storage for classic and exotic car collectors, boat and RV owners, business inventories, personal home possessions or workshops for the hobbyists. In addition, the Covenants, Conditions and Restrictions (CC&R’s) are written to provide the privacy and security that cannot be found at most other locations.</p>
+                <p class="alineado-a-izquierda">Unlike most self storage facilities, there are no 'business' hours. Therefore, with 24/7 access, you can come and go on your schedule. And since you own it, why not customize your garage condo? Add cabinets, shelving, mezzanines, car lifts, custom floor coverings, flat panel TVs and more. We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them. If that fits your needs then this facility in north Houston was built for you. Hopefully, the following pages will adequately describe the property and answer questions you may have. However, there is nothing quite like walking the property and talking with the owner/developer about your particular needs. Please feel free to call or email if you need further assistance.</p>
+                <p class="alineado-a-izquierda">Located in the Champions area of Spring, it conveniently serves Houston, Cypress, The Woodlands and Tomball, Texas. This quality indoor storage space can be a valuable extension of your home or business.</p> 
                 </div>
-                <div class="service span3">
-                    <div class="icon-awesome">
-                        <i class="icon-table"></i>
-                    </div>
-                    <h4>Responsive Layout</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et...</p>
-                    <a href="services.html">Read more</a>
-                </div>
-                <div class="service span3">
-                    <div class="icon-awesome">
-                        <i class="icon-magic"></i>
-                    </div>
-                    <h4>Awesome Logos</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et...</p>
-                    <a href="services.html">Read more</a>
-                </div>
-                <div class="service span3">
-                    <div class="icon-awesome">
-                        <i class="icon-print"></i>
-                    </div>
-                    <h4>High Res Prints</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et...</p>
-                    <a href="services.html">Read more</a>
-                </div>
-            </div>
+                <div class="span4"></div>
+      
+               
         </div>
-
+</div>
         <!-- Latest Work -->
         <div class="portfolio container">
             <div class="portfolio-title">
@@ -216,15 +192,15 @@
                         <div class="tab-content">
                             <div class="tab-pane active" id="A">
                                 <img src="assets/img/testimonials/1.jpg" title="" alt="">
-                                <p>"Luxury Warehouseis a great concept. My wife and I owned various small businesses in Spring since 1994. In that time frame we literally threw away $50,000.00 in rent payments. Now that we are owners at the Oasis, it is like putting money in the bank. The facilities are extra clean, secure and the management is professional..."<br /><span class="violet">Ken - Owner Since December 2010</span></p>
+                                <p>"Luxury Warehouse is a great concept. My wife and I owned various small businesses in Spring since 1994. In that time frame we literally threw away $50,000.00 in rent payments. Now that we are owners at the Luxury warehouse, it is like putting money in the bank. The facilities are extra clean, secure and the management is professional..."<br /><span class="violet">Ken - Owner Since December 2010</span></p>
                             </div>
                             <div class="tab-pane" id="B">
                                 <img src="assets/img/testimonials/2.jpg" title="" alt="">
-                                <p>"Before Luxury Warehouse I was looking for a stand alone garage or adding a couple of garages to my home. Oasis was my best choice because it solved two big issues for me. I didn't have to worry about security , which is a problem with a stand alone garage and I didn't have to worry about moving and not being able to get the cost of an additional 3 garages out of the next buyer of my house. It fit my needs just right..."<br /><span class="violet">Mike - Owner Since September 2007</span></p>
+                                <p>"Before Luxury Warehouse I was looking for a stand alone garage or adding a couple of garages to my home. Luxury warehouse was my best choice because it solved two big issues for me. I didn't have to worry about security , which is a problem with a stand alone garage and I didn't have to worry about moving and not being able to get the cost of an additional 3 garages out of the next buyer of my house. It fit my needs just right..."<br /><span class="violet">Mike - Owner Since September 2007</span></p>
                             </div>
                             <div class="tab-pane" id="C">
                                 <img src="assets/img/testimonials/3.jpg" title="" alt="">
-                                <p>"We bought the garage condo at Luxury Warehouse because we downsized from small acreage with a large garage and storage area to a patio home. We ware not interested in locating property and dealing with constructing and maintaining our own building. Garage Oasis is close to home, provides the climate controlled storage we want and the work space we need. Our neighbors are friendly, trustworthy and have interesting hobbies. Garage Oasis is a useful and fun place; well maintained and simple to own..."<br /><span class="violet">Allan - Owner Since November 2008</span></p>
+                                <p>"We bought the garage condo at Luxury Warehouse because we downsized from small acreage with a large garage and storage area to a patio home. We ware not interested in locating property and dealing with constructing and maintaining our own building. Luxury warehosue is close to home, provides the climate controlled storage we want and the work space we need. Our neighbors are friendly, trustworthy and have interesting hobbies. Luxury warehouse is a useful and fun place; well maintained and simple to own..."<br /><span class="violet">Allan - Owner Since November 2008</span></p>
                             </div>
                             <div class="tab-pane" id="D">
                                 <img src="assets/img/testimonials/1.jpg" title="" alt="">
@@ -243,7 +219,7 @@
         </div>
 
         <!-- Footer -->
-        <footer>
+ <footer>
             <div class="container">
                 <div class="row">
                     <div class="widget span3">
@@ -261,10 +237,11 @@
                     </div>
                     <div class="widget span3">
                         <h4>Contact Us</h4>
-                        <p><i class="icon-map-marker"></i> Address: Via Principe Amedeo 9, 10100, Torino, TO, Italy</p>
-                        <p><i class="icon-phone"></i> Phone: 0039 333 12 68 347</p>
-                        <p><i class="icon-user"></i> Skype: Andia_Agency</p>
-                        <p><i class="icon-envelope-alt"></i> Email: <a href="">contact@andia.co.uk</a></p>
+                        <p><i class="icon-map-marker"></i> Address: Houston Texas</p>
+                        <p><i class="icon-phone"></i> Phone: 01800 luxurywerehouse</p>
+                        <p><i class="icon-user"></i> Skype: luxurywarehouse</p>
+                        <p><i class="icon-envelope-alt"></i> Email: <a href="">info@luxurywerehousestorage.com</a></p>
+                    </div>
                     </div>
                 </div>
                 <div class="footer-border"></div>
@@ -274,7 +251,7 @@
                     </div>
                     <div class="social span8">
                         <a class="facebook" href=""></a>
-                        <a class="youtube" href=""></a>
+                        <a class="dribbble" href=""></a>
                         <a class="twitter" href=""></a>
                         <a class="pinterest" href=""></a>
                     </div>
