se agregaron datos al footer
se agregaron datos al footer y se corrió el mismo.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <p>Let us provide a "home" for your luxury motor coach and protect your investment while you are not enjoying the open road. ..</p>
                     <div class="icon-awesome">
                         <a href="assets/img/portfolio/bus-boat.jpg" rel="prettyPhoto"><i class="icon-search"></i></a>
-                        <a href="portfolio.html"><i class="icon-plus"></i></a>
+                        <a href="houston-rv-storage-luxury-motor-storage.html"><i class="icon-plus"></i></a>
                     </div>
                 </div>
                 <div class="work span3">
@@ -163,7 +163,7 @@
                     <p>Luxury warehouse is the premier community for car collectors in Houston. It was designed to enhance your passion for car collecting...</p>
                     <div class="icon-awesome">
                         <a href="assets/img/portfolio/collection-car.jpg" rel="prettyPhoto"><i class="icon-search"></i></a>
-                        <a href="portfolio.html"><i class="icon-plus"></i></a>
+                        <a href="carcollectors-luxury-warehouse-storage-houston.html"><i class="icon-plus"></i></a>
                     </div>
                 </div>
                 <div class="work span3">
@@ -201,11 +201,11 @@
                                 <p>"Luxury Warehouse is a great concept. My wife and I owned various small businesses in Spring since 1994. In that time frame we literally threw away $50,000.00 in rent payments. Now that we are owners at the Luxury warehouse, it is like putting money in the bank. The facilities are extra clean, secure and the management is professional..."<br /><span class="violet">Ken - Owner Since December 2010</span></p>
                             </div>
                             <div class="tab-pane" id="B">
-                                <img src="assets/img/testimonials/2.jpg" title="" alt="">
+                                <img src="assets/img/testimonials/1.jpg" title="" alt="">
                                 <p>"Before Luxury Warehouse I was looking for a stand alone garage or adding a couple of garages to my home. Luxury warehouse was my best choice because it solved two big issues for me. I didn't have to worry about security , which is a problem with a stand alone garage and I didn't have to worry about moving and not being able to get the cost of an additional 3 garages out of the next buyer of my house. It fit my needs just right..."<br /><span class="violet">Mike - Owner Since September 2007</span></p>
                             </div>
                             <div class="tab-pane" id="C">
-                                <img src="assets/img/testimonials/3.jpg" title="" alt="">
+                                <img src="assets/img/testimonials/1.jpg" title="" alt="">
                                 <p>"We bought the garage condo at Luxury Warehouse because we downsized from small acreage with a large garage and storage area to a patio home. We ware not interested in locating property and dealing with constructing and maintaining our own building. Luxury warehosue is close to home, provides the climate controlled storage we want and the work space we need. Our neighbors are friendly, trustworthy and have interesting hobbies. Luxury warehouse is a useful and fun place; well maintained and simple to own..."<br /><span class="violet">Allan - Owner Since November 2008</span></p>
                             </div>
                             <div class="tab-pane" id="D">
@@ -225,13 +225,13 @@
         </div>
 
         <!-- Footer -->
- <footer>
+   <footer>
             <div class="container">
                 <div class="row">
                     <div class="widget span3">
                         <h4>About Us</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-                        <p><a href="">Read more...</a></p>
+                        <p><p>Luxury warehose storage was designed to meet the strong and growing demand for climate controlled, over-sized storage (495 - 2400 square feet) while providing incomparable value through ownership.</p></p>
+                        <p><a href="about.html">Read more...</a></p>
                     </div>
                     <div class="widget span3">
                         <h4>Latest Tweets</h4>
@@ -248,16 +248,15 @@
                         <p><i class="icon-user"></i> Skype: luxurywarehouse</p>
                         <p><i class="icon-envelope-alt"></i> Email: <a href="">info@luxurywerehousestorage.com</a></p>
                     </div>
-                    </div>
                 </div>
                 <div class="footer-border"></div>
                 <div class="row">
                     <div class="copyright span4">
-                        <p>Copyright 2012 Andia - All rights reserved. Template by <a href="http://azmind.com">Azmind</a>.</p>
+                        <p>Copyright 2013 Luxury Warehouse - All rights reserved.</p><p>Template by <a href="#">ipbox studio</a>.</p>
                     </div>
                     <div class="social span8">
                         <a class="facebook" href=""></a>
-                        <a class="dribbble" href=""></a>
+                        <a class="youtube" href=""></a>
                         <a class="twitter" href=""></a>
                         <a class="pinterest" href=""></a>
                     </div>
