--- a/services.html
+++ b/services.html
@@ -164,13 +164,13 @@
         </div>
 
         <!-- Footer -->
-        <footer>
+          <footer>
             <div class="container">
                 <div class="row">
                     <div class="widget span3">
                         <h4>About Us</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-                        <p><a href="">Read more...</a></p>
+                        <p><p>Luxury warehose storage was designed to meet the strong and growing demand for climate controlled, over-sized storage (495 - 2400 square feet) while providing incomparable value through ownership.</p></p>
+                        <p><a href="about.html">Read more...</a></p>
                     </div>
                     <div class="widget span3">
                         <h4>Latest Tweets</h4>
@@ -187,16 +187,15 @@
                         <p><i class="icon-user"></i> Skype: luxurywarehouse</p>
                         <p><i class="icon-envelope-alt"></i> Email: <a href="">info@luxurywerehousestorage.com</a></p>
                     </div>
-                    </div>
                 </div>
                 <div class="footer-border"></div>
                 <div class="row">
                     <div class="copyright span4">
-                        <p>Copyright 2012 Andia - All rights reserved. Template by <a href="http://azmind.com">Azmind</a>.</p>
+                        <p>Copyright 2013 Luxury Warehouse - All rights reserved.</p><p>Template by <a href="#">ipbox studio</a>.</p>
                     </div>
                     <div class="social span8">
                         <a class="facebook" href=""></a>
-                        <a class="dribbble" href=""></a>
+                        <a class="youtube" href=""></a>
                         <a class="twitter" href=""></a>
                         <a class="pinterest" href=""></a>
                     </div>
