se agregaron botones en el area de servicios

--- a/services.html
+++ b/services.html
@@ -102,35 +102,33 @@
         </div>
 
         <!-- Services -->
-        <div class="what-we-do container">
-            <div class="row">
-                <div class="service span3">
-                    <div class="icon-awesome">
-                        <i class="icon-eye-open"></i>
-                    </div>
-                    <h4>Beautiful Websites</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+        <div class="portfolio container">
+                       <div class="row">
+                <div class="work span3">
+                    <img src="assets/img/portfolio/bus-boat.jpg" alt="">
+                    <h4>RV AND MOTORCOACH</h4>
+                    <p>Let us provide a "home" for your luxury motor coach and protect your investment while you are not enjoying the open road. ..</p>
+                  
+                        <a class="btn" href="#">Try It Now!</a>
+                   
                 </div>
-                <div class="service span3">
-                    <div class="icon-awesome">
-                        <i class="icon-table"></i>
-                    </div>
-                    <h4>Responsive Layout</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+                <div class="work span3">
+                    <img src="assets/img/portfolio/collection-car.jpg" alt="">
+                    <h4>CAR COLLECTOR</h4>
+                    <p>Luxury warehouse is the premier community for car collectors in Houston. It was designed to enhance your passion for car collecting...</p>
+                    <a class="btn" href="#">Try It Now!</a>
                 </div>
-                <div class="service span3">
-                    <div class="icon-awesome">
-                        <i class="icon-magic"></i>
-                    </div>
-                    <h4>Awesome Logos</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+                <div class="work span3">
+                    <img src="assets/img/portfolio/business.jpg" alt="">
+                    <h4>Business</h4>
+                    <p>Luxury warehouse serves a wide variety of business uses for owners in the Houston area. A business owner can scale back rental costs ...</p>
+                     <a class="btn" href="#">Try It Now!</a>
                 </div>
-                <div class="service span3">
-                    <div class="icon-awesome">
-                        <i class="icon-print"></i>
-                    </div>
-                    <h4>High Res Prints</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+                <div class="work span3">
+                    <img src="assets/img/portfolio/club-house.jpg" alt="">
+                    <h4>CLUB HOUSE</h4>
+                    <p>Luxury ware house serves a wide variety of business uses for owners in the Houston area. A business owner can scale back rental costs ...</p>
+                    <a class="btn" href="#">Try It Now!</a>
                 </div>
             </div>
         </div>
