integracion de contenido

--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
         <div class="about-us container">
             <div class="row">
                 <div class="about-us-text span12">
-                    <h4>About Andia</h4>
+                    <h4>About Luxury Warehouse Storage</h4>
                     <p class="alineado-a-izquierda">Luxury warehose storage was designed to meet the strong and growing demand for climate controlled, over-sized storage (495 - 2400 square feet) while providing incomparable value through ownership. The first phase, Buildings 100 - 300, was developed in 2007. Building 400 was completed in 2012 and Building 500 in July, 2013. By the Spring of 2014, Building 600 will house the last 14 units.</p>  
                  <p class="alineado-a-izquierda">This exclusive gated community of garage condominiums is situated on nine acres with 99 completed units. Each unit provides secure indoor storage for classic and exotic car collectors, boat and RV owners, business inventories, personal home possessions or workshops for the hobbyists. In addition, the Covenants, Conditions and Restrictions (CC&R’s) are written to provide the privacy and security that cannot be found at most other locations.</p>
                 <p class="alineado-a-izquierda">Unlike most self storage facilities, there are no 'business' hours. Therefore, with 24/7 access, you can come and go on your schedule. And since you own it, why not customize your garage condo? Add cabinets, shelving, mezzanines, car lifts, custom floor coverings, flat panel TVs and more. We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them. If that fits your needs then this facility in north Houston was built for you. Hopefully, the following pages will adequately describe the property and answer questions you may have. However, there is nothing quite like walking the property and talking with the owner/developer about your particular needs. Please feel free to call or email if you need further assistance.</p>
@@ -111,86 +111,24 @@
                 <h3>Meet Our Team</h3>
             </div>
             <div class="row">
-                <div class="team-text span3">
-                    <img src="assets/img/team/1.jpg" alt="">
-                    <h4>John Doe</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor...</p>
-                    <div class="social-links">
-                        <a class="facebook" href=""></a>
-                        <a class="twitter" href=""></a>
-                        <a class="linkedin" href=""></a>
-                        <a class="email" href=""></a>
-                    </div>
-                </div>
-                <div class="team-text span3">
-                    <img src="assets/img/team/2.jpg" alt="">
-                    <h4>Jane Doe</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor...</p>
-                    <div class="social-links">
-                        <a class="facebook" href=""></a>
-                        <a class="twitter" href=""></a>
-                        <a class="linkedin" href=""></a>
-                        <a class="email" href=""></a>
-                    </div>
-                </div>
-                <div class="team-text span3">
-                    <img src="assets/img/team/3.jpg" alt="">
-                    <h4>Tim Brown</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
-                    <div class="social-links">
-                        <a class="facebook" href=""></a>
-                        <a class="twitter" href=""></a>
-                        <a class="linkedin" href=""></a>
-                        <a class="email" href=""></a>
-                    </div>
-                </div>
-                <div class="team-text span3">
-                    <img src="assets/img/team/4.jpg" alt="">
-                    <h4>Sarah Red</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
-                    <div class="social-links">
-                        <a class="facebook" href=""></a>
-                        <a class="twitter" href=""></a>
-                        <a class="linkedin" href=""></a>
-                        <a class="email" href=""></a>
-                    </div>
+                <div class="span12">
+                    <br>
+                    <img src="assets/img/entrace-luxury-warehouse-storage-texas.jpg" alt="">
+                    
                 </div>
             </div>
         </div>
 
-        <!-- Testimonials -->
-        <div class="testimonials container">
-            <div class="testimonials-title">
-                <h3>Testimonials</h3>
-            </div>
+ <!-- Call To Action -->
+        <div class="call-to-action container">
             <div class="row">
-                <div class="testimonial-list span12">
-                    <div class="tabbable tabs-below">
-                        <div class="tab-content">
-                            <div class="tab-pane active" id="A">
-                                <img src="assets/img/testimonials/1.jpg" title="" alt="">
-                                <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur..."<br /><span class="violet">Lorem Ipsum, dolor.co.uk</span></p>
-                            </div>
-                            <div class="tab-pane" id="B">
-                                <img src="assets/img/testimonials/2.jpg" title="" alt="">
-                                <p>"Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat..."<br /><span class="violet">Minim Veniam, nostrud.com</span></p>
-                            </div>
-                            <div class="tab-pane" id="C">
-                                <img src="assets/img/testimonials/3.jpg" title="" alt="">
-                                <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur..."<br /><span class="violet">Lorem Ipsum, dolor.co.uk</span></p>
-                            </div>
-                            <div class="tab-pane" id="D">
-                                <img src="assets/img/testimonials/1.jpg" title="" alt="">
-                                <p>"Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat..."<br /><span class="violet">Minim Veniam, nostrud.com</span></p>
-                            </div>
-                        </div>
-                       <ul class="nav nav-tabs">
-                           <li class="active"><a href="#A" data-toggle="tab"></a></li>
-                           <li class=""><a href="#B" data-toggle="tab"></a></li>
-                           <li class=""><a href="#C" data-toggle="tab"></a></li>
-                           <li class=""><a href="#D" data-toggle="tab"></a></li>
-                       </ul>
-                   </div>
+                <div class="call-to-action-text span12">
+                    <div class="ca-text">
+                        <p>Lorem ipsum <span class="violet">dolor sit amet</span>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et ut wisi enim.</p>
+                    </div>
+                    <div class="ca-button">
+                        <a href="">Try It Now!</a>
+                    </div>
                 </div>
             </div>
         </div>
