--- a/services.html
+++ b/services.html
@@ -95,8 +95,11 @@
         <div class="services-full-width container">
             <div class="row">
                 <div class="services-full-width-text span12">
-                    <h4>Lorem Ipsum Dolor Sit Amet</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <span class="violet">suscipit lobortis</span> nisl ut aliquip ex ea commodo consequat. Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod tempor</strong> incididunt.</p>
+                    <h4>Uses</h4>
+                    <p>This exclusive gated community of garage condominiums is situated on nine acres with 99 completed units. Each unit provides secure indoor storage for classic and exotic car collectors, boat and RV owners, business inventories, personal home possessions or workshops for the hobbyists .
+                    Add cabinets, shelving, mezzanines, car lifts, custom floor coverings, flat panel TVs and more. If you would like some recommendations, we have teamed with several companies to provide our buyers with the highest quality of flooring, mezzanines, and more.
+                </p>
+                <p>We placed strategically  closed circuit security cameras to record the comings and goings on the property. Each unit has a monitored heat detector. The perimeter is gated and coded for owners access only. Each owner, at his expense, may install cameras in their own unit that can be monitored from their computer at home. Above all, since you are in a community of like minded neighbors, the present owners keep an eye out for each other.</p><p> The smartly decorated clubhouse provides a kitchen area, a comfortable seating section with a large screen TV, WIFI network and three restroom facilities (one has a shower in it). Outside offers a granite table and chairs under a covered patio.</p>
                 </div>
             </div>
         </div>
@@ -109,26 +112,26 @@
                     <h4>RV AND MOTORCOACH</h4>
                     <p>Let us provide a "home" for your luxury motor coach and protect your investment while you are not enjoying the open road. ..</p>
                   
-                        <a class="btn" href="#">Try It Now!</a>
+                        <a class="btn" href="#">Read More...</a>
                    
                 </div>
                 <div class="work span3">
                     <img src="assets/img/portfolio/collection-car.jpg" alt="">
                     <h4>CAR COLLECTOR</h4>
                     <p>Luxury warehouse is the premier community for car collectors in Houston. It was designed to enhance your passion for car collecting...</p>
-                    <a class="btn" href="#">Try It Now!</a>
+                    <a class="btn" href="#">Read More...</a>
                 </div>
                 <div class="work span3">
                     <img src="assets/img/portfolio/business.jpg" alt="">
                     <h4>Business</h4>
                     <p>Luxury warehouse serves a wide variety of business uses for owners in the Houston area. A business owner can scale back rental costs ...</p>
-                     <a class="btn" href="#">Try It Now!</a>
+                     <a class="btn" href="#">Read More...</a>
                 </div>
                 <div class="work span3">
                     <img src="assets/img/portfolio/club-house.jpg" alt="">
                     <h4>CLUB HOUSE</h4>
                     <p>Luxury ware house serves a wide variety of business uses for owners in the Houston area. A business owner can scale back rental costs ...</p>
-                    <a class="btn" href="#">Try It Now!</a>
+                    <a class="btn" href="#">Read More...</a>
                 </div>
             </div>
         </div>
@@ -136,13 +139,36 @@
         <!-- Services Half Width Text -->
         <div class="services-half-width container">
             <div class="row">
+                <div class="page-header"><h4>AMENITIES</h4></div>
                 <div class="services-half-width-text span6">
-                    <h4>Lorem Ipsum</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <span class="violet">suscipit lobortis</span> nisl ut aliquip ex ea commodo consequat. Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod tempor</strong> incididunt.</p>
+
+                    <h4>Property</h4>
+                    <ul>
+                        <li>Video Surveillance</li>
+                        <li>24/7 access</li>
+                        <li>Fenced with electronic gate</li>
+                        <li>Owners clubhouse with restroom facilities*</li>
+                        <li>60 ft wide drive aisles</li>
+                        <li>RV dump station</li>
+                        <li>Quality controlled CC&R's</li>
+                        <li>Nine acre development with 300' setback off of Louetta</li>
+                    </ul>
                 </div>
                 <div class="services-half-width-text span6">
-                    <h4>Dolor Sit Amet</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <span class="violet">suscipit lobortis</span> nisl ut aliquip ex ea commodo consequat. Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <strong>eiusmod tempor</strong> incididunt.</p>
+                    <h4>Unit</h4>
+                    <ul>
+                        <li>Insulated roof (R30), walls (R19) and garage door(s)</li>
+                        <li>Individually metered electricity</li>
+                        <li>HVAC system with own thermostat</li>
+                        <li>100 amp breaker panel (6-110 v and 1-220 v outlets)</li>
+                        <li>Eave height over 19'</li>
+                        <li>Garage doors are 12'-18' wide and 14' high</li>
+                        <li>Wired for telephone and/or cable</li>
+                        <li>Pedestrian doors on most units</li>
+                        <li>Ample fluorescent lighting</li>
+                        <li>Hard wired heat sensor</li>
+                        <li>30 or 50 amp RV outlet</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -152,10 +178,10 @@
             <div class="row">
                 <div class="call-to-action-text span12">
                     <div class="ca-text">
-                        <p>Lorem ipsum <span class="violet">dolor sit amet</span>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et ut wisi enim.</p>
+                        <p>Property<span class="violet">dolor sit amet</span>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et ut wisi enim.</p>
                     </div>
                     <div class="ca-button">
-                        <a href="">Try It Now!</a>
+                        <a href="">Buy Now!</a>
                     </div>
                 </div>
             </div>
